Form alignment fixed in css
git-svn-id: svn://www.jklm.no/ceag@120 cf62ef7f-851a-0410-8a6c-b699277a4589

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -47,6 +47,13 @@ tr {
     margin: 0;
 }
 
+form {
+    text-align: left;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 div.news {
     border: thin solid black;
     width: 70%;
